# zephyr-linky-tic

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  prj.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay
include/: ble.h  tic.h
scripts/: tic-checksum.py
src/: ble.c  main.c  tic.c  tic_demo.c
